fix: menu gap

--- a/css/app.css
+++ b/css/app.css
@@ -113,7 +113,7 @@ img {
 
 .nav {
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   margin-top: 5rem;
   position: relative;
   z-index: 1;
